Changed module name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hooks",
+  "name": "hooksjs",
   "version": "0.0.1",
   "description": "Generic Hooks and Triggers",
   "main": "index.js",
